Add CRUD operations for Topics and Departments in Management APIs
- Implement API and service methods for creating, updating, deleting, and retrieving Topics and Departments.
- Extend request and response DTOs to support CRUD operations.
- Add `@PreAuthorize` annotations to enforce admin-only permissions.
- Enhance response logging and error handling for CRUD endpoints.